# tasks

./: .gitignore
.github/workflows/: api.yml
services/tasks_api/: main.py  package.json  pyproject.toml  serverless.yml  tests.py
